; ModuleID = '/home/carl/AnghaBench/memcached/extr_items.c_item_stats_sizes_disable.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_items.c_item_stats_sizes_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stats_sizes_lock = common dso_local global i32 0, align 4
@stats_sizes_hist = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [13 x i8] c"sizes_status\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"disabled\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @item_stats_sizes_disable(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = call i32 @mutex_lock(i32* @stats_sizes_lock)
  %6 = load i32*, i32** @stats_sizes_hist, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32*, i32** @stats_sizes_hist, align 8
  %10 = call i32 @free(i32* %9)
  store i32* null, i32** @stats_sizes_hist, align 8
  br label %11

11:                                               ; preds = %8, %2
  %12 = call i32 @APPEND_STAT(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0))
  %13 = call i32 @mutex_unlock(i32* @stats_sizes_lock)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @APPEND_STAT(i8*, i8*, i8*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
